--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -15,7 +15,7 @@ jobs:
       NODE_ENV: test
     steps:
     - uses: actions/checkout@master
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
@@ -46,12 +46,16 @@ jobs:
         path: ./
     - name: Uncompress directory
       run: unzip directory.zip
-    - name: Restore symlinks
-      run: |
-        yarn
-    - name: Build Recomponents
+    # - name: Restore symlinks
+    #   run: |
+    #     yarn
+    - name: Build Recomponents 1
       run: |
         yarn workspace @rebilly/recomponents build
+    - name: Build Recomponents 2
+      working-directory: packages/recomponents
+      run: |
+        yarn build
     - name: Compress build directory
       run: zip -j -r recomponents.zip ./packages/recomponents/dist/
     - name: Upload artifact
@@ -69,122 +73,122 @@ jobs:
       with:
         name: Storybook
         path: ./storybook.zip
-  test:
-    runs-on: ubuntu-latest
-    needs: setup
-    strategy:
-      matrix:
-        node-version: [10.x]
-    env:
-      NODE_ENV: test
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@master
-      with:
-        name: Directory
-        path: ./
-    - name: Uncompress directory
-      run: unzip directory.zip
-    - name: Restore symlinks
-      run: |
-        yarn
-    - name: Run code linter
-      run: |
-        yarn workspace @rebilly/recomponents lint
-    - name: Run unit tests
-      run: |
-        yarn workspace @rebilly/recomponents test
-  snapshot:
-    name: Check snapshots
-    runs-on: ubuntu-latest
-    needs: [setup, compile]
-    strategy:
-      matrix:
-        node-version: [10.x]
-    env:
-      NODE_ENV: test
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@master
-      with:
-        name: Directory
-        path: ./
-    - name: Uncompress directory
-      run: unzip directory.zip
-    - name: Restore symlinks
-      run: |
-        yarn
-    - name: Download Storybook build
-      uses: actions/download-artifact@master
-      with:
-        name: Storybook
-        path: ./
-    - name: Uncompress Storybook build
-      run: unzip storybook.zip
-    - name: Run snapshot tests
-      run: |
-        docker-compose -f ./packages/recomponents/.image-snapshots/docker-compose.yml up --build
-  ssr:
-    name: Verify SSR
-    runs-on: ubuntu-latest
-    needs: [setup, compile]
-    strategy:
-      matrix:
-        node-version: [10.x]
-    env:
-      NODE_ENV: test
-    steps:
-    - name: Download Directory artifact
-      uses: actions/download-artifact@master
-      with:
-        name: Directory
-        path: ./
-    - name: Uncompress directory
-      run: unzip directory.zip
-    - name: Restore symlinks
-      run: |
-        yarn
-    - name: Download Recomponents build
-      uses: actions/download-artifact@master
-      with:
-        name: Recomponents
-        path: ./
-    - name: Uncompress Recomponents build
-      run: unzip recomponents.zip -d packages/recomponents/dist
-    - name: Build Nuxt application
-      run: |
-        yarn workspace recomponents-demo-nuxt build
-    - name: Build Gridsome application
-      run: |
-        yarn workspace recomponents-demo-gridsome build
-  release:
-    name: Semantic release
-    runs-on: ubuntu-latest
-    needs: [setup, compile, test, snapshot, ssr]
-    strategy:
-      matrix:
-        node-version: [10.x]
-    env:
-      NODE_ENV: test
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@master
-      with:
-        name: Directory
-        path: ./
-    - name: Uncompress directory
-      run: unzip directory.zip
-    - name: Restore symlinks
-      run: |
-        yarn
-    - name: Download Recomponents build
-      uses: actions/download-artifact@master
-      with:
-        name: Recomponents
-        path: ./
-    - name: Uncompress Recomponents build
-      run: unzip recomponents.zip -d packages/recomponents/dist
-    - name: Semantic release
-      run: |
-        yarn workspace @rebilly/recomponents semantic-release
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: setup
+  #   strategy:
+  #     matrix:
+  #       node-version: [10.x]
+  #   env:
+  #     NODE_ENV: test
+  #   steps:
+  #   - name: Download artifact
+  #     uses: actions/download-artifact@master
+  #     with:
+  #       name: Directory
+  #       path: ./
+  #   - name: Uncompress directory
+  #     run: unzip directory.zip
+  #   - name: Restore symlinks
+  #     run: |
+  #       yarn
+  #   - name: Run code linter
+  #     run: |
+  #       yarn workspace @rebilly/recomponents lint
+  #   - name: Run unit tests
+  #     run: |
+  #       yarn workspace @rebilly/recomponents test
+  # snapshot:
+  #   name: Check snapshots
+  #   runs-on: ubuntu-latest
+  #   needs: [setup, compile]
+  #   strategy:
+  #     matrix:
+  #       node-version: [10.x]
+  #   env:
+  #     NODE_ENV: test
+  #   steps:
+  #   - name: Download artifact
+  #     uses: actions/download-artifact@master
+  #     with:
+  #       name: Directory
+  #       path: ./
+  #   - name: Uncompress directory
+  #     run: unzip directory.zip
+  #   - name: Restore symlinks
+  #     run: |
+  #       yarn
+  #   - name: Download Storybook build
+  #     uses: actions/download-artifact@master
+  #     with:
+  #       name: Storybook
+  #       path: ./
+  #   - name: Uncompress Storybook build
+  #     run: unzip storybook.zip
+  #   - name: Run snapshot tests
+  #     run: |
+  #       docker-compose -f ./packages/recomponents/.image-snapshots/docker-compose.yml up --build
+  # ssr:
+  #   name: Verify SSR
+  #   runs-on: ubuntu-latest
+  #   needs: [setup, compile]
+  #   strategy:
+  #     matrix:
+  #       node-version: [10.x]
+  #   env:
+  #     NODE_ENV: test
+  #   steps:
+  #   - name: Download Directory artifact
+  #     uses: actions/download-artifact@master
+  #     with:
+  #       name: Directory
+  #       path: ./
+  #   - name: Uncompress directory
+  #     run: unzip directory.zip
+  #   - name: Restore symlinks
+  #     run: |
+  #       yarn
+  #   - name: Download Recomponents build
+  #     uses: actions/download-artifact@master
+  #     with:
+  #       name: Recomponents
+  #       path: ./
+  #   - name: Uncompress Recomponents build
+  #     run: unzip recomponents.zip -d packages/recomponents/dist
+  #   - name: Build Nuxt application
+  #     run: |
+  #       yarn workspace recomponents-demo-nuxt build
+  #   - name: Build Gridsome application
+  #     run: |
+  #       yarn workspace recomponents-demo-gridsome build
+  # release:
+  #   name: Semantic release
+  #   runs-on: ubuntu-latest
+  #   needs: [setup, compile, test, snapshot, ssr]
+  #   strategy:
+  #     matrix:
+  #       node-version: [10.x]
+  #   env:
+  #     NODE_ENV: test
+  #   steps:
+  #   - name: Download artifact
+  #     uses: actions/download-artifact@master
+  #     with:
+  #       name: Directory
+  #       path: ./
+  #   - name: Uncompress directory
+  #     run: unzip directory.zip
+  #   - name: Restore symlinks
+  #     run: |
+  #       yarn
+  #   - name: Download Recomponents build
+  #     uses: actions/download-artifact@master
+  #     with:
+  #       name: Recomponents
+  #       path: ./
+  #   - name: Uncompress Recomponents build
+  #     run: unzip recomponents.zip -d packages/recomponents/dist
+  #   - name: Semantic release
+  #     run: |
+  #       yarn workspace @rebilly/recomponents semantic-release
   
