--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -5,8 +5,8 @@ on:
   pull_request:
     types: [assigned, opened, synchronize, reopened]
 jobs:
-  setup:
-    name: Install dependencies
+  compile:
+    name: Build dependencies
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -14,7 +14,8 @@ jobs:
     env:
       NODE_ENV: test
     steps:
-    - uses: actions/checkout@master
+    - name: Checkout
+      uses: actions/checkout@master
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
@@ -22,53 +23,9 @@ jobs:
     - name: Install dependencies
       run: |
         yarn
-        cp -rL node_modules node_modules2
-        rm -rf node_modules
-        mv node_modules2 node_modules
-        cp -rL packages/recomponents/node_modules packages/recomponents/node_modules2
-        rm -rf packages/recomponents/node_modules
-        mv packages/recomponents/node_modules2 packages/recomponents/node_modules
-    - name: Compress directory
-      run: zip -r directory.zip .
-    - name: Upload artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: Directory
-        path: ./directory.zip
-  compile:
-    runs-on: ubuntu-latest
-    needs: setup
-    strategy:
-      matrix:
-        node-version: [10.x]
-    env:
-      NODE_ENV: test
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@master
-      with:
-        name: Directory
-        path: ./
-    - name: Uncompress directory
-      run: unzip directory.zip
-    - name: Kek
-      run: |
-        ls node_modules
-        ls packages/recomponents/node_modules
-    # - name: Restore symlinks
-    #   run: |
-    #     yarn install --frozen-lockfile
-    - name: Build Recomponents 1
+    - name: Build Recomponents
       run: |
         yarn workspace @rebilly/recomponents build
-    # - name: Add install
-    #   working-directory: packages/recomponents
-    #   run: |
-    #     yarn global add npm-run-all
-    # - name: Build Recomponents 2
-    #   working-directory: packages/recomponents
-    #   run: |
-    #     yarn build
     - name: Compress build directory
       run: zip -j -r recomponents.zip ./packages/recomponents/dist/
     - name: Upload artifact
@@ -86,61 +43,58 @@ jobs:
       with:
         name: Storybook
         path: ./storybook.zip
-  # test:
-  #   runs-on: ubuntu-latest
-  #   needs: setup
-  #   strategy:
-  #     matrix:
-  #       node-version: [10.x]
-  #   env:
-  #     NODE_ENV: test
-  #   steps:
-  #   - name: Download artifact
-  #     uses: actions/download-artifact@master
-  #     with:
-  #       name: Directory
-  #       path: ./
-  #   - name: Uncompress directory
-  #     run: unzip directory.zip
-  #   - name: Restore symlinks
-  #     run: |
-  #       yarn
-  #   - name: Run code linter
-  #     run: |
-  #       yarn workspace @rebilly/recomponents lint
-  #   - name: Run unit tests
-  #     run: |
-  #       yarn workspace @rebilly/recomponents test
-  # snapshot:
-  #   name: Check snapshots
-  #   runs-on: ubuntu-latest
-  #   needs: [setup, compile]
-  #   strategy:
-  #     matrix:
-  #       node-version: [10.x]
-  #   env:
-  #     NODE_ENV: test
-  #   steps:
-  #   - name: Download artifact
-  #     uses: actions/download-artifact@master
-  #     with:
-  #       name: Directory
-  #       path: ./
-  #   - name: Uncompress directory
-  #     run: unzip directory.zip
-  #   - name: Restore symlinks
-  #     run: |
-  #       yarn
-  #   - name: Download Storybook build
-  #     uses: actions/download-artifact@master
-  #     with:
-  #       name: Storybook
-  #       path: ./
-  #   - name: Uncompress Storybook build
-  #     run: unzip storybook.zip
-  #   - name: Run snapshot tests
-  #     run: |
-  #       docker-compose -f ./packages/recomponents/.image-snapshots/docker-compose.yml up --build
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [10.x]
+    env:
+      NODE_ENV: test
+    steps:
+    - name: Checkout
+      uses: actions/checkout@master
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Install dependencies
+      run: |
+        yarn
+    - name: Run code linter
+      run: |
+        yarn workspace @rebilly/recomponents lint
+    - name: Run unit tests
+      run: |
+        yarn workspace @rebilly/recomponents test
+  snapshot:
+    name: Check snapshots
+    runs-on: ubuntu-latest
+    needs: [compile]
+    strategy:
+      matrix:
+        node-version: [10.x]
+    env:
+      NODE_ENV: test
+    steps:
+    - name: Checkout
+      uses: actions/checkout@master
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Install dependencies
+      run: |
+        yarn
+    - name: Download Storybook build
+      uses: actions/download-artifact@master
+      with:
+        name: Storybook
+        path: ./
+    - name: Uncompress Storybook build
+      run: unzip storybook.zip
+    - name: Run snapshot tests
+      run: |
+        docker-compose -f ./packages/recomponents/.image-snapshots/docker-compose.yml up --build
   # ssr:
   #   name: Verify SSR
   #   runs-on: ubuntu-latest
